# obsidian-mcp

./: .env.example  CLAUDE.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml
src/: auth.py  config.py  server.py  sync.py  tools.py  vault.py
tests/: test_tools.py  test_vault.py
