[project]
name = "obsidian-mcp"
version = "0.1.0"
description = "MCP server exposing an Obsidian vault (search/read/list/create/update notes) over Streamable HTTP"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "uvicorn>=0.30",
    "gitpython>=3.1",
    "pyyaml>=6.0",
    "pydantic-settings>=2.4",
    "python-frontmatter>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
